# vocabs

./: Dockerfile  README.md  TODO.md  pyproject.toml  requirements.txt
vocabs/backend/: add_vocab.py  unesco_parser.ipynb
vocabs/backend/gstore/: __init__.py  connector.py  load.py
vocabs/backend/neo4voc/: connection.py  query.py
vocabs/backend/neo4voc/legacy/: __init__.py  config.py  connection.py  deployment.py  ext.py  facade.py  query.py  readme  version.py  views.py
vocabs/backend/neo4voc/legacy/fixtures/: __init__.py  cli.py  ext.py  neo4j.py
vocabs/backend/neo4voc/legacy/templates/iroko_graph/: base.html  index.html
vocabs/frontend/: app.py
