[tool.poetry]
name = "vocabs"
version = "0.1.0"
description = "Controlled Vocabularies Service"
authors = ["Rafael Martinez Estevez <malayibiri@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
neo4j = "^5.24.0"
fastapi = "^0.112.2"
rdflib = "^7.0.0"
sentence-transformers = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
